--- a/UIDemo/MainWindow.xaml
+++ b/UIDemo/MainWindow.xaml
@@ -15,6 +15,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <StackPanel Orientation="Horizontal">
+            <Button Content="DataGridDemo" Click="Button_Click"></Button>
+        </StackPanel>
     </Grid>
 </Controls:MetroWindow>
